<resources>
    <string name="app_name">Organisateur</string>
    <string name="cancel">Annuler</string>
    <string name="action_back">Retour</string>
    <string name="action_save">Enregistrer</string>
    <string name="action_delete">Supprimer</string>
    <string name="action_undo">Annuler</string>
    <string name="action_close">Fermer</string>
    <string name="date_today">aujourd\'hui</string>
    <string name="date_yesterday">hier</string>
    <string name="date_tomorrow">demain</string>
    <string name="date_on">le %1$s</string>
    <string name="greeting_morning">Bonjour,</string>
    <string name="greeting_afternoon">Bon après-midi,</string>
    <string name="greeting_evening">Bonsoir,</string>
    <string name="home_subtitle_prefix">Nous sommes %1$s</string>
    <string name="title_tasks">Tâches</string>
    <string name="subtitle_tasks">Vos priorités</string>
    <string name="title_notes">Notes</string>
    <string name="subtitle_notes">Idées et listes</string>
    <string name="title_alarms">Rappels</string>
    <string name="subtitle_alarms">Ne rien oublier</string>
    <string name="title_calendar">Agenda</string>
    <string name="subtitle_calendar">Vos événements</string>
    <string name="home_tasks_none">Rien à faire</string>
    <string name="home_tasks_one">1 à faire</string>
    <string name="home_tasks_other">%1$d à faire</string>
    <string name="home_notes_none">Aucune note</string>
    <string name="home_notes_one">1 note</string>
    <string name="home_notes_other">%1$d notes</string>
    <string name="home_alarms_none">Aucun actif</string>
    <string name="home_alarms_one">1 actif</string>
    <string name="home_alarms_other">%1$d actifs</string>
    <string name="home_events_none">Journée libre</string>
    <string name="home_events_one">1 aujourd\'hui</string>
    <string name="home_events_other">%1$d aujourd\'hui</string>
    <string name="tasks_title">Tâches</string>
    <string name="tasks_add">Nouvelle tâche</string>
    <string name="tasks_summary_empty">Aucune tâche</string>
    <string name="tasks_summary_all_done">Tout est terminé, bravo</string>
    <string name="tasks_summary">%1$s · %2$s</string>
    <string name="tasks_todo_one">1 à faire</string>
    <string name="tasks_todo_other">%1$d à faire</string>
    <string name="tasks_done_none">aucune terminée</string>
    <string name="tasks_done_one">1 terminée</string>
    <string name="tasks_done_other">%1$d terminées</string>
    <string name="tasks_empty_title">Aucune tâche</string>
    <string name="tasks_empty_subtitle">Notez ce que vous avez à faire, cochez-le une fois fait.</string>
    <string name="tasks_empty_action">Créer une tâche</string>
    <string name="task_new_title">Nouvelle tâche</string>
    <string name="task_edit_title">Modifier la tâche</string>
    <string name="task_label_hint">Que faut-il faire ?</string>
    <string name="task_label_error">Décrivez la tâche en quelques mots</string>
    <string name="task_done_switch">Tâche terminée</string>
    <string name="task_checkbox_description">Marquer comme terminée</string>
    <string name="task_item_description">Tâche %1$s</string>
    <string name="task_reorder_hint">Appui long pour déplacer</string>
    <string name="task_added">Ajoutée %1$s</string>
    <string name="task_created">Tâche ajoutée</string>
    <string name="task_updated">Tâche mise à jour</string>
    <string name="task_deleted">Tâche supprimée</string>
    <string name="task_checked_deleted">Tâche terminée et supprimée</string>
    <string name="task_settings_action">Réglages des tâches</string>
    <string name="task_settings_title">Réglages</string>
    <string name="task_settings_placement">Nouvelle tâche</string>
    <string name="task_settings_placement_top">En haut</string>
    <string name="task_settings_placement_bottom">En bas</string>
    <string name="task_settings_check">Tâche cochée</string>
    <string name="task_settings_check_strike">Barrée</string>
    <string name="task_settings_check_delete">Supprimée</string>
    <string name="calendar_title">Agenda</string>
    <string name="calendar_add">Nouvel événement</string>
    <string name="calendar_previous_month">Mois précédent</string>
    <string name="calendar_next_month">Mois suivant</string>
    <string name="calendar_today">Aujourd\'hui</string>
    <string name="calendar_section_today">Aujourd\'hui, %1$s</string>
    <string name="calendar_section_other">%1$s</string>
    <string name="calendar_summary_none">Aucun événement ce mois-ci</string>
    <string name="calendar_summary_one">1 événement ce mois-ci</string>
    <string name="calendar_summary_other">%1$d événements ce mois-ci</string>
    <string name="calendar_empty_subtitle">Aucun événement prévu à cette date.</string>
    <string name="calendar_day_description">%1$s%2$s</string>
    <string name="calendar_day_has_events">, des événements sont prévus</string>
    <string name="calendar_hijri_day_header">%1$s · %2$s</string>
    <string name="calendar_gregorian_span">%1$s – %2$s</string>
    <string name="calendar_system_action">Type de calendrier</string>
    <string name="calendar_system_gregorian">Grégorien</string>
    <string name="calendar_system_hijri">Hijri</string>
    <string name="hijri_year_suffix">H</string>
    <string-array name="hijri_months">
        <item>mouharram</item>
        <item>safar</item>
        <item>rabia al awal</item>
        <item>rabia ath-thani</item>
        <item>joumada al oula</item>
        <item>joumada ath-thania</item>
        <item>rajab</item>
        <item>chaabane</item>
        <item>ramadan</item>
        <item>chawwal</item>
        <item>dhou al qi\'da</item>
        <item>dhou al hijja</item>
    </string-array>
    <string name="event_new_title">Nouvel événement</string>
    <string name="event_edit_title">Modifier l\'événement</string>
    <string name="event_label_hint">Intitulé de l\'événement</string>
    <string name="event_label_error">Donnez un intitulé à votre événement</string>
    <string name="event_sheet_hint">Appuyez sur l\'heure pour la modifier</string>
    <string name="event_time_picker_title">Heure de l\'événement</string>
    <string name="event_notification_title">M\'avertir</string>
    <string name="event_notification_subtitle">Une notification à l\'heure prévue</string>
    <string name="event_notification_past">L\'heure choisie est déjà passée : aucune notification ne sera envoyée</string>
    <string name="event_item_description">Événement %1$s à %2$s</string>
    <string name="event_created">Événement ajouté à %1$s</string>
    <string name="event_updated">Événement mis à jour</string>
    <string name="event_deleted">Événement supprimé</string>
    <string name="event_channel_name">Événements du calendrier</string>
    <string name="event_notification_on">Notification programmée</string>
    <string name="event_notification_text">Événement de %1$s</string>
    <string name="agenda_title">Agenda</string>
    <string name="agenda_view_day">Jour</string>
    <string name="agenda_view_week">Semaine</string>
    <string name="agenda_view_month">Mois</string>
    <string name="agenda_view_schedule">Planning</string>
    <string name="agenda_range">%1$s – %2$s</string>
    <string name="agenda_all_day_short">Journée</string>
    <string name="agenda_schedule_empty">Rien de prévu dans les trois prochains mois.</string>
    <string name="agenda_search">Rechercher</string>
    <string name="agenda_search_hint">Intitulé, lieu ou notes</string>
    <string name="agenda_search_empty">Aucun événement ne correspond.</string>
    <string name="event_all_day">Journée entière</string>
    <string name="event_start">Début</string>
    <string name="event_end">Fin</string>
    <string name="event_location_hint">Lieu</string>
    <string name="event_description_hint">Notes</string>
    <string name="event_color">Couleur</string>
    <string name="event_repeat">Répétition</string>
    <string name="event_reminders">Rappels</string>
    <string name="event_add_reminder">Ajouter</string>
    <string name="event_remove_reminder">Retirer ce rappel</string>
    <string name="event_no_reminder">Aucun</string>
    <string name="event_end_before_start">La fin doit suivre le début</string>
    <string name="event_date_picker_title">Date de l\'événement</string>
    <string name="event_color_default">Ambre</string>
    <string name="event_color_red">Rouge</string>
    <string name="event_color_orange">Orange</string>
    <string name="event_color_green">Vert</string>
    <string name="event_color_blue">Bleu</string>
    <string name="event_color_indigo">Indigo</string>
    <string name="event_color_purple">Violet</string>
    <string name="event_color_pink">Rose</string>
    <string name="event_color_grey">Gris</string>
    <string name="reminder_at_start">À l\'heure dite</string>
    <string name="reminder_minutes">%1$d min avant</string>
    <string name="reminder_hours">%1$d h avant</string>
    <string name="reminder_days">%1$d j avant</string>
    <string name="recurrence_title">Répétition</string>
    <string name="recurrence_never">Jamais</string>
    <string name="recurrence_freq_day">Jour</string>
    <string name="recurrence_freq_week">Semaine</string>
    <string name="recurrence_freq_month">Mois</string>
    <string name="recurrence_freq_year">Année</string>
    <string name="recurrence_interval_prefix">Tous les</string>
    <string name="recurrence_unit_day">jours</string>
    <string name="recurrence_unit_week">semaines</string>
    <string name="recurrence_unit_month">mois</string>
    <string name="recurrence_unit_year">ans</string>
    <string name="recurrence_end">Fin</string>
    <string name="recurrence_end_never">Jamais</string>
    <string name="recurrence_end_date">Le</string>
    <string name="recurrence_end_count">Après</string>
    <string name="recurrence_count_suffix">occurrences</string>
    <string name="recurrence_monthly_by_month_day">Le %1$d</string>
    <string name="recurrence_monthly_by_weekday">Le %1$s</string>
    <string name="recurrence_weekday_position_last">dernier</string>
    <string name="recurrence_weekday_position">%1$de</string>
    <string name="recurrence_summary_daily">Tous les jours</string>
    <string name="recurrence_summary_weekly">Toutes les semaines</string>
    <string name="recurrence_summary_monthly">Tous les mois</string>
    <string name="recurrence_summary_yearly">Tous les ans</string>
    <string name="recurrence_summary_every_days">Tous les %1$d jours</string>
    <string name="recurrence_summary_every_weeks">Toutes les %1$d semaines</string>
    <string name="recurrence_summary_every_months">Tous les %1$d mois</string>
    <string name="recurrence_summary_every_years">Tous les %1$d ans</string>
    <string name="recurrence_summary_days">%1$s, %2$s</string>
    <string name="recurrence_summary_until">%1$s, jusqu\'au %2$s</string>
    <string name="recurrence_summary_count">%1$s, %2$d fois</string>
    <string name="edit_scope_edit_title">Modifier</string>
    <string name="edit_scope_delete_title">Supprimer</string>
    <string name="edit_scope_this">Cette occurrence</string>
    <string name="edit_scope_following">Cette occurrence et les suivantes</string>
    <string name="edit_scope_all">Toute la série</string>
    <string name="notes_title">Notes</string>
    <string name="notes_add">Nouvelle note</string>
    <string name="note_color_action">Couleur de la note</string>
    <string name="note_checklist_item_hint">Élément</string>
    <string name="note_checklist_check_item">Cocher l\'élément</string>
    <string name="note_checklist_remove_item">Supprimer l\'élément</string>
    <string name="note_checklist_reorder_item">Déplacer l\'élément</string>
    <string name="note_show_checkboxes">Afficher les cases</string>
    <string name="note_uncheck_all">Tout décocher</string>
    <string name="note_delete_checked">Supprimer les éléments cochés</string>
</resources>