<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_color"
        android:icon="@drawable/ic_palette"
        android:title="@string/note_color_action"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_outline"
        android:title="@string/action_delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_toggle_checkboxes"
        android:title="@string/note_show_checkboxes"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_uncheck_all"
        android:title="@string/note_uncheck_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_checked"
        android:title="@string/note_delete_checked"
        app:showAsAction="never" />
</menu>
